Fixed image placement on iphone 12 pro

--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ body {
     }
 
     .demonte-img {
-        margin-left: 25px;
+        margin: 0 auto;
     }
 }
 
